Lessons/Lesson 9 - Networking/9.5 - Lab/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-only-busybox1
  namespace: restricted
spec:
  podSelector:
    matchLabels:
      app: "lab9-nginx"
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
      podSelector:
        matchLabels:
          app: "sleepybox1"
    ports:
    - protocol: TCP
      port: 80
